--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 
 [dependencies]
 minisat = "0.4.4"
+
+[profile.release]
+strip = true # Automatically strip symbols from the binary.
+lto = true
