--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 csv = "1.3.0"
 serde = { version = "1.0.193", features = ["derive"] }
 
+minisat = "0.4.4"
+
 
 [profile.release]
 strip = true # Automatically strip symbols from the binary.
